// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/ForwardStar/grpc-example-service/service";

package service;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello ( HelloRequest ) returns ( HelloReply ) {}
}

service ETCDWrapper {
  rpc SetKV ( SetKVRequest ) returns ( SetKVResponse ) {}
  rpc GetKey ( GetKeyRequest ) returns ( GetKeyResponse ) {}
  rpc DeleteKey ( DeleteKeyRequest ) returns ( DeleteKeyResponse ) {}
  rpc ListValues ( ListValuesRequest ) returns ( ListValuesResponse ) {}
}

message DummyInfo {
  int64 m = 1;
  int64 n = 2;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message SetKVRequest {
  string key = 1;
  DummyInfo value = 2;
}

message SetKVResponse {
  string message = 1;
}

message GetKeyRequest {
  string key = 1;
}

message GetKeyResponse {
  DummyInfo value = 1;
}

message DeleteKeyRequest {
  string key = 1;
}

message DeleteKeyResponse {
  string message = 1;
}

message ListValuesRequest {

}

message ListValuesResponse {
  repeated DummyInfo values = 1;
}